# renewable-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
app/: 1-datasets.ipynb  1-eda.ipynb  2-ca.ipynb  2-rf-solar.ipynb  2-rf-wind.ipynb  2-rf.ipynb  3-rf.ipynb  3-svm-solar.ipynb  3-svm-wind.ipynb  4-ann-solar.ipynb  4-ann-wind.ipynb  4-ann.ipynb  4-svm.ipynb  5-rf-old.ipynb  6-data-clustering.ipynb  6-svm-old.ipynb  7-ann-old.ipynb  8-data-clustering.ipynb  _publish.yml  _quarto.yml  about.qmd  ann.qmd  data.qmd  index.qmd  rf.qmd  svm.qmd
app/_site/: 1-data-manipulation-preview.html  1-data-manipulation.html  1-data-manipulation.ipynb  1-data-manipulation.out.ipynb  1-data.html  1-datasets-preview.html  1-datasets.html  1-datasets.ipynb  1-datasets.out.ipynb  1-eda.html  2-ca.html  2-rf-solar-preview.html  2-rf-solar.html  2-rf-solar.ipynb  2-rf-solar.out.ipynb  2-rf-wind-preview.html  2-rf-wind.html  2-rf-wind.ipynb  2-rf-wind.out.ipynb  2-rf.html  3-rf-preview.html  3-rf.html  3-rf.out.ipynb  3-svm-solar-preview.html  3-svm-solar.html  3-svm-solar.ipynb  3-svm-solar.out.ipynb  3-svm-wind-preview.html  3-svm-wind.html  (+33 more)
archive/: ann.py  k_means.ipynb  rf.py  svm.py  util.py
data/: cluster_output.csv  irradiance.csv  solar.csv  solar_clustered.csv  solar_refactored.csv  state_costs.csv
prototype/: bisecting_k_means.ipynb
src/: ann.py  bisecting_k_means.ipynb  bisecting_k_means_model.py  ca.py  eda.ipynb  generate_irradiance.py  get_states.py  k_cluster.ipynb  k_cluster_model.py  k_means.ipynb  model.py  regression.ipynb  rf.py  svm.py
