[tool.poetry]
name = "aidanneeson-greenenergysuggestor"
version = "0.1.0"
description = ""
authors = ["Aidan Neeson <neeson01@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
pypvwatts = "^3.0.4"
jupyter-summarytools = "^0.2.3"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
