[tool.poetry]
name = "renewable-ml-analysis"
version = "0.1.0"
description = ""
authors = ["Aidan Neeson <neeson01@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.4.0"
numpy = "^1.23.0"
matplotlib = "3.8.0"
pandas = "^2.0"
pypvwatts = "^3.0.4"
jupyter-summarytools = "^0.2.3"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
ydata-profiling = "^4.5.1"
plotly = "^5.18.0"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["*.ipynb"]
ignore = ["E402", "E501"]
